fix calculations row keys to avoid shifting focus when re-sorting on update

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,12 @@ $iconSize: 28px;
 
 table.calculations, table.recipes {
   tbody {
+    tr {
+      &.focused {
+        background: #def;
+      }
+    }
+
     td {
       vertical-align: middle;
       text-align: center;
